--- a/4-application/app/src/main/AndroidManifest.xml
+++ b/4-application/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.mob_dev_portfolio">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
