--- a/4-application/app/build.gradle
+++ b/4-application/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation "androidx.fragment:fragment:1.4.1"
     implementation "com.google.android.material:material:1.2.0"
     implementation "com.android.volley:volley:1.2.1"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
