--- a/4-application/app/build.gradle
+++ b/4-application/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0"
     implementation "com.android.volley:volley:1.2.1"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 }
