--- a/4-application/app/src/main/AndroidManifest.xml
+++ b/4-application/app/src/main/AndroidManifest.xml
@@ -22,12 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Capture"
+        <activity
+            android:name=".Capture"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation"
-            android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
+            android:stateNotNeeded="true" />
     </application>
 
 </manifest>
