--- a/4-application/app/build.gradle
+++ b/4-application/app/build.gradle
@@ -5,6 +5,13 @@ plugins {
 android {
     compileSdk 32
 
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
+
+
     defaultConfig {
         applicationId "com.example.mob_dev_portfolio"
         minSdk 28
@@ -34,8 +41,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.room:room-runtime:2.4.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     annotationProcessor "androidx.room:room-compiler:2.4.2"
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.fragment:fragment:1.4.1"
