--- a/4-application/app/src/main/AndroidManifest.xml
+++ b/4-application/app/src/main/AndroidManifest.xml
@@ -25,9 +25,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Capture"
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            android:stateNotNeeded="true" />
+            android:stateNotNeeded="true"
+            tools:replace="android:screenOrientation"/>
     </application>
 
 </manifest>
